examples/bad/syntax2.swifty
//variable initialization without assignment
var x

x = 10
